# experimental-scrapy-mcp

./: README.md  conftest.py  docker-compose.yml  mcp.json  pyproject.toml  scrapy.cfg
.github/workflows/: verify-pr.yml
crawlers/: .gitignore  pyproject.toml  scrapy.cfg
crawlers/src/crawlers/: __init__.py  middlewares.py  settings.py
crawlers/src/crawlers/spiders/: diy_dot_com_spider.py
scripts/: deploy.sh  setup.sh  start.sh  test.sh
scripts/docker/: setup.sh
src/app/: main.py  mcp.py  server.py
src/app/crawler/: pipelines.py
src/app/crawlers/: __init__.py  diy_dot_com_crawler.py  pipelines.py  settings.py
src/app/crawlers/diy_dot_com_crawler/: __init__.py  diy_dot_com_crawler.py
src/app/crawlers/screwfix_crawler/: __init__.py  screwfix_crawler.py
src/app/crawlers/spiders/: diy_dot_com_spider.py
src/app/crawlers/toolstation_crawler/: __init__.py  toolstation_crawler.py
src/app/crawlers/wickes_crawler/: __init__.py  wickes_crawler.py
tests/: test_mcp_product_search.py
