[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "mcp[cli]~=1.9.0",
    "beautifulsoup4~=4.13.0",
    "crawlee[cli,parsel]~=0.6.0",
    "fastapi[standard]~=0.115.0",
]

[dependency-groups]
dev = [
    "httpx~=0.28.0",
    "pytest~=8.4.0",
    "ruff~=0.12.0",
]

[tool.pytest.ini_options]
addopts = "--capture=no"
